# bevy-roguelike

./: Cargo.toml
src/: assets.rs  camera.rs  globals.rs  main.rs  states.rs  vectors.rs
src/actions/: mod.rs  models.rs  systems.rs
src/board/: components.rs  mod.rs  systems.rs
src/graphics/: assets.rs  mod.rs  pieces.rs  tiles.rs
src/input/: mod.rs
src/manager/: mod.rs
src/pieces/: components.rs  mod.rs
src/player/: cards.rs  mod.rs
src/ui/: assets.rs  deck.rs  helpers.rs  mod.rs
src/vectors/: mod.rs  utils.rs
