[package]
name = "bevy-roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8.5"

[profile.release]
lto = "thin"
